--- a/index.html
+++ b/index.html
@@ -49,21 +49,10 @@
       event.preventDefault(); 
     });
 
-    img.addEventListener('mouseover', (event) => {
+    img.addEventListener('mousemove', (event) => {
       event.preventDefault(); 
     });
 
-    img.addEventListener('mouseout', (event) => {
-      event.preventDefault(); 
-    });
-
-    img.addEventListener('mousedown', (event) => {
-      event.preventDefault(); 
-    });
-
-    img.addEventListener('mouseup', (event) => {
-      event.preventDefault(); 
-    });
 
         let products = document.getElementsByClassName("product");
         let cart = document.getElementById("cart");
