--- a/index.html
+++ b/index.html
@@ -9,25 +9,17 @@
 <body class="body">
     <main class="main">
             <div class="shelf">
-                <div class="shelf__row-1">
-                    <div class="product" draggable="true"><img src="/assets/images/products/product1.svg" alt=""></div>
-                    <div class="product" draggable="true"><img src="/assets/images/products/product2.svg" alt=""></div>
-                    <div class="product" draggable="true"><img src="/assets/images/products/product3.svg" alt=""></div>
-                    <div class="product" draggable="true"><img src="/assets/images/products/product4.svg" alt=""></div>
-                </div>
-
-                <div class="shelf__row-2">
-                    <div class="product" draggable="true"><img src="/assets/images/products/product5.svg" alt=""></div>
-                    <div class="product" draggable="true"><img src="/assets/images/products/product6.svg" alt=""></div>
-                    <div class="product" draggable="true"><img src="/assets/images/products/product7.svg" alt=""></div>
-                </div>
-
-                <div class="shelf__row-3">
-                    <div class="product" draggable="true"><img src="/assets/images/products/product8.svg" alt=""></div>
-                    <div class="product" draggable="true"><img src="/assets/images/products/product9.svg" alt=""></div>
-                    <div class="product" draggable="true"><img src="/assets/images/products/product10.svg" alt=""></div>
-                    <div class="product" draggable="true"><img src="/assets/images/products/product11.svg" alt=""></div>
-                </div>
+                    <div class="product" draggable="true"><img class = "product__img" src="/assets/images/products/product1.svg" alt=""></div>
+                    <div class="product" draggable="true"><img class = "product__img" src="/assets/images/products/product2.svg" alt=""></div>
+                    <div class="product" draggable="true"><img class = "product__img" src="/assets/images/products/product3.svg" alt=""></div>
+                    <div class="product" draggable="true"><img class = "product__img" src="/assets/images/products/product4.svg" alt=""></div>
+                    <div class="product" draggable="true"><img class = "product__img" src="/assets/images/products/product5.svg" alt=""></div>
+                    <div class="product" draggable="true"><img class = "product__img" src="/assets/images/products/product6.svg" alt=""></div>
+                    <div class="product" draggable="true"><img class = "product__img" src="/assets/images/products/product7.svg" alt=""></div>
+                    <div class="product" draggable="true"><img class = "product__img" src="/assets/images/products/product8.svg" alt=""></div>
+                    <div class="product" draggable="true"><img class = "product__img" src="/assets/images/products/product9.svg" alt=""></div>
+                    <div class="product" draggable="true"><img class = "product__img" src="/assets/images/products/product10.svg" alt=""></div>
+                    <div class="product" draggable="true"><img class = "product__img" src="/assets/images/products/product11.svg" alt=""></div>
             </div>
 
             <div class="cart" id="cart">
@@ -54,6 +46,7 @@
         for(let product of products) {
             product.addEventListener("dragstart", function(event) {
                 let selected = event.target;
+
                 savedClass = selected.className;
 
                 cart.addEventListener("dragover", function(event) {
@@ -61,13 +54,14 @@
                 });
 
                 cart.addEventListener("drop", function(event) {             
-                    if(cartItems.children.length > 2) {
+                    if(cartItems.children.length > 3) {
                         selected.style.position = 'absolute';
                         selected.style.left = coorX + "px";
                         coorX += 20;
                         console.log(coorX);
+                    } else {
+                        selected.style.position = 'static';
                     }
-
                    cartItems.appendChild(selected)
                    selected = null;
                 })
