--- a/index.html
+++ b/index.html
@@ -49,61 +49,132 @@
         const buttonByProducts = document.querySelector(".button-byProducts");
         console.log(buttonByProducts);
         let coorX = 5;
-        for(let product of products) {
-            product.addEventListener("dragstart", function(event) {
-                let selected = event.target;
-                savedClass = selected.className;
 
-                cart.addEventListener("dragover", function(event) {
-                    event.preventDefault();
-                });
+            const productsContainer = document.querySelector('.shelf');
+            const cartItemsContainer = document.querySelector('.cart-items');
 
-                cart.addEventListener("drop", function(event) {        
-                    if(cartItems.children.length >= 2) {
-                        buttonByProducts.classList.add("button-byProducts_active");
-                    } 
+            productsContainer.addEventListener('dragstart', handleDragStart);
+            productsContainer.addEventListener('dragover', handleDragOver);
+            productsContainer.addEventListener('drop', handleDrop);
+
+            // Обработчики событий для touch-устройств
+            productsContainer.addEventListener('touchstart', handleTouchStart);
+            productsContainer.addEventListener('touchmove', handleTouchMove);
+            productsContainer.addEventListener('touchend', handleTouchEnd);
+
+            let draggedElement = null;
+            let initialX, initialY;
+
+            // Функция для начала перетаскивания
+            function handleDragStart(event) {
+                draggedElement = event.target;
+                event.dataTransfer.setData('text/plain', draggedElement.id); // Сохраняем ID элемента
+                draggedElement.classList.add('dragging');
+            }
+
+            // Функция для разрешения перетаскивания над зоной выброса
+            function handleDragOver(event) {
+                event.preventDefault(); // Необходимо для предотвращения стандартного поведения
+            }
+
+            // Функция для выброса элемента
+            function handleDrop(event) {
+            event.preventDefault();
+            const droppedElementId = event.dataTransfer.getData('text/plain');
+            const droppedElement = document.getElementById(droppedElementId);
+            cartItemsContainer.appendChild(droppedElement); // Добавляем элемент в корзину
+            droppedElement.classList.remove('dragging'); 
+            }
+
+            function handleTouchStart(event) {
+            event.preventDefault(); 
+            draggedElement = event.target;
+            initialX = event.touches[0].clientX;
+            initialY = event.touches[0].clientY;
+            draggedElement.classList.add('dragging');
+            }
+
+            // Перемещение элемента
+            function handleTouchMove(event) {
+            if (draggedElement) {
+                event.preventDefault();
+                const currentX = event.touches[0].clientX;
+                const currentY = event.touches[0].clientY;
+                const deltaX = currentX - initialX;
+                const deltaY = currentY - initialY;
+                draggedElement.style.transform = `translate(${deltaX}px, ${deltaY}px)`;
+            }
+            }
+
+            // Отпускание элемента
+            function handleTouchEnd(event) {
+            if (draggedElement) {
+                event.preventDefault();
+                const droppedElement = draggedElement; // В touch-событиях element.target не доступен
+                draggedElement = null;
+                droppedElement.style.transform = '';
+                droppedElement.classList.remove('dragging'); 
+                // Проверяем, попал ли элемент в корзину (например, по координатам)
+                if (cartItemsContainer.contains(droppedElement)) {
+                console.log('Элемент перетащен в корзину!');
+                }
+            }
+            }
+        // for(let product of products) {
+        //     product.addEventListener("dragstart", function(event) {
+        //         let selected = event.target;
+        //         savedClass = selected.className;
+
+        //         cart.addEventListener("dragover", function(event) {
+        //             event.preventDefault();
+        //         });
+
+        //         cart.addEventListener("drop", function(event) {        
+        //             if(cartItems.children.length >= 2) {
+        //                 buttonByProducts.classList.add("button-byProducts_active");
+        //             } 
                     
-                    if(cartItems.children.length > 3) {
-                        selected.style.position = 'absolute';
-                        selected.style.left = coorX + "px";
-                        coorX += 20;
-                        console.log(coorX);
-                    } else {
-                        selected.style.position = 'static';
-                    }
-                   cartItems.appendChild(selected)
-                   selected = null;
-                })
-            })
-        }
+        //             if(cartItems.children.length > 3) {
+        //                 selected.style.position = 'absolute';
+        //                 selected.style.left = coorX + "px";
+        //                 coorX += 20;
+        //                 console.log(coorX);
+        //             } else {
+        //                 selected.style.position = 'static';
+        //             }
+        //            cartItems.appendChild(selected)
+        //            selected = null;
+        //         })
+        //     })
+        // }
 
-        for(let product of products) {
-            product.addEventListener("touchstart", function(event) {
-                let selected = event.target;
-                savedClass = selected.className;
+        // for(let product of products) {
+        //     product.addEventListener("touchstart", function(event) {
+        //         let selected = event.target;
+        //         savedClass = selected.className;
 
-                cart.addEventListener("touchmove", function(event) {
-                    event.preventDefault();
-                });
+        //         cart.addEventListener("touchmove", function(event) {
+        //             event.preventDefault();
+        //         });
 
-                cart.addEventListener("touchend", function(event) {        
-                    if(cartItems.children.length >= 2) {
-                        buttonByProducts.classList.add("button-byProducts_active");
-                    } 
+        //         cart.addEventListener("touchend", function(event) {        
+        //             if(cartItems.children.length >= 2) {
+        //                 buttonByProducts.classList.add("button-byProducts_active");
+        //             } 
                     
-                    if(cartItems.children.length > 3) {
-                        selected.style.position = 'absolute';
-                        selected.style.left = coorX + "px";
-                        coorX += 20;
-                        console.log(coorX);
-                    } else {
-                        selected.style.position = 'static';
-                    }
-                   cartItems.appendChild(selected)
-                   selected = null;
-                })
-            })
-        }
+        //             if(cartItems.children.length > 3) {
+        //                 selected.style.position = 'absolute';
+        //                 selected.style.left = coorX + "px";
+        //                 coorX += 20;
+        //                 console.log(coorX);
+        //             } else {
+        //                 selected.style.position = 'static';
+        //             }
+        //            cartItems.appendChild(selected)
+        //            selected = null;
+        //         })
+        //     })
+        // }
     </script>
 </body>
 </html>
